# teltonika-avl-protocol

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md  release-plz.toml
.github/workflows/: pull-request.yml  release-pr.yml
src/: avl.rs  codec8.rs  error.rs  lib.rs
src/codec/: codec8.rs  codec8_extended.rs  mod.rs
