[package]
name = "teltonika-avl-protocol"
description = "Teltonika AVL protocol written in Rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mpowell90/teltonika-avl-protocol"
homepage = "https://github.com/mpowell90/teltonika-avl-protocol"
keywords = ["teltonika", "avl", "protocol", "gps", "tracking"]

[dependencies]
heapless = "0.9.2"
